# logme_cmake_submodule_example

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: build.yml
src/: main.cpp
